--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
